Test bluetoogh connection

--- a/android/CallMyGranny/app/src/main/res/values/strings.xml
+++ b/android/CallMyGranny/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Call My Granny</string>
 
     <!--Main -->
+    <string name="connect_text">Connect</string>
     <string name="choose_contacts_text">Контакты</string>
     <string name="sync_text">SYNC!</string>
 </resources>
